--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
   <div id="footer">
     <div class="container text-center">
       <div class="fnav">
-        <p>Copyright &copy; 2018 Son Singh Shekhawat. Designed by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+        <p>Copyright &copy; 2018 Son Singh Shekhawat. Designed by <a href="#" rel="nofollow">Son Singh Shekhawat</a></p>
       </div>
     </div>
   </div>
