--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
         <div class="col-xs-12 col-md-6"> <img src="img/about.jpg" class="img-responsive" alt=""> </div>
         <div class="col-xs-12 col-md-6">
           <div class="about-text">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo
-              nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p>
+            <p>Hi I am Son Singh Shekhawat</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo
               nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare.</p>
             <a href="#portfolio" class="btn btn-primary btn-lg page-scroll">My Portfolio</a> </div>
